--- a/View/FormAssessment/FormAssessmentWindow.xaml
+++ b/View/FormAssessment/FormAssessmentWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:viewModel="clr-namespace:ViewModel.FormAssessment;assembly=ViewModel"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
-        Title="Beoordeling formulier" Height="750" Width="900"
+        Title="Beoordeling formulier" Height="auto" Width="auto"
         Background="#FF3A3A3A">
     <Window.Resources>
         <viewModel:FormAssessmentViewModel x:Key="ViewModel"/>
@@ -114,5 +114,7 @@
             </ItemsControl>
             <view:CriteriaUserControl></view:CriteriaUserControl>
         </StackPanel>
+        <Button Grid.Row="5" Grid.Column="0" Height="30" Width="150" Content="Opslaan"  VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></Button>
+        <TextBox Grid.Row="5" Grid.Column ="1" VerticalAlignment="Center" Height="50" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Text="Opmerkingen"></TextBox>
     </Grid>
 </Window>
