--- a/View/GroupSelection/GroupSelection.xaml
+++ b/View/GroupSelection/GroupSelection.xaml
@@ -15,13 +15,13 @@
         </Grid.RowDefinitions>
 
         <Border Background="Gray" CornerRadius="2"    BorderThickness="1" Margin="-14,0,0,0" HorizontalAlignment="Left" Width="295" ></Border>
-        <ListBox    x:Name="GroupListBox"               Margin="34,53,0,175" ItemsSource="{Binding GroupNames}" SelectedItem="{Binding SelectedGroup ,Mode=TwoWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="232"  IsSynchronizedWithCurrentItem="true" SelectionChanged="GroupSelectionChanged"></ListBox>
+        <ListBox    x:Name="GroupListBox"               Margin="33,50,0,178" ItemsSource="{Binding GroupNames}" SelectedItem="{Binding SelectedGroup ,Mode=TwoWay}" SelectedIndex="{Binding SelectedGroupIndex, Mode=TwoWay}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="232"  IsSynchronizedWithCurrentItem="true" SelectionChanged="GroupSelectionChanged"></ListBox>
         <TextBox    x:Name="AddGroupTextbox"            Margin="33,0,0,122" Text="{Binding GroupName}"  TextWrapping="Wrap"  VerticalContentAlignment="Center" RenderTransformOrigin="0.526,0.478" HorizontalAlignment="Left" Width="177" Height="36" VerticalAlignment="Bottom"/>
         <Button     x:Name="AddGroupButton"             Margin="213,0,0,122" Command="{Binding AddGroup}" Content="Voeg toe"  RenderTransformOrigin="0.543,0.479" Height="36" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="52"/>
         <Button     x:Name="DeleteSelectedGroupButton"  Margin="33,0,0,78"  Command="{Binding RemoveGroup}" Content="Verwijder geselecteerde groep" HorizontalAlignment="Left"  VerticalAlignment="Bottom" Height="39" Width="232"/>
 
 
-        <ListBox    x:Name="StudentListBox"                 Margin="297,10,0,139"   SelectedItem="{Binding SelectedStudent ,Mode=TwoWay}" ItemsSource="{Binding Students}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="231"></ListBox>
+        <ListBox    x:Name="StudentListBox"                 Margin="297,10,0,139"   SelectedItem="{Binding SelectedStudent, Mode=TwoWay}" ItemsSource="{Binding StudentNames}" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Width="231"></ListBox>
         <TextBox    x:Name="StudentNumberTextBox"           Margin="297,0,0,98"     TextWrapping="Wrap" Text="{Binding StudentNumber}" VerticalContentAlignment="Center" RenderTransformOrigin="0.493,0.496" HorizontalAlignment="Left" Width="114" Height="36" VerticalAlignment="Bottom"/>
         <Button     x:Name="AddStudentButton"               Margin="297,0,0,58"     Command="{Binding AddStudent}" Content="Voeg toe" RenderTransformOrigin="0.543,0.479" Height="36" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="231" />
         <Button     x:Name="DeleteSelectedStudentButton"    Margin="297,0,0,10"     Command="{Binding RemoveStudent}" Content="Verwijder geselecteerde student" HorizontalAlignment="Left"  Width="231" Height="40" VerticalAlignment="Bottom" Click="DeleteSelectedStudent"/>
