--- a/View/StartingScreen/StartingScreen.xaml
+++ b/View/StartingScreen/StartingScreen.xaml
@@ -7,12 +7,19 @@
         mc:Ignorable="d"
         Title="StartingScreen" Height="450" Width="800">
 
+    <Window.Resources>
+        <local:StartingScreenViewModel x:Key="ViewModel">
+            
+        </local:StartingScreenViewModel>
+    </Window.Resources>
+    
     <Window.DataContext>
-        <local:StartingScreenViewModel/>
+        <Binding Source="{StaticResource ResourceKey=ViewModel}"/>
     </Window.DataContext>
+    
     <Grid>
         <TextBlock HorizontalAlignment="Center" Margin="0,92,0,0" TextWrapping="Wrap" Text="Selecteer het project" VerticalAlignment="Top"/>
-        <ListBox d:ItemsSource="{Binding projects}" Margin="332,124,332,124"/>
+        <ListBox d:ItemsSource="{Binding Projects}" Margin="317,124,317,124"/>
         <Button Content="Ga verder" HorizontalAlignment="Left" Margin="375,339,0,0" VerticalAlignment="Top"/>
 
     </Grid>
