--- a/View/StartingScreen/StartingScreen.xaml
+++ b/View/StartingScreen/StartingScreen.xaml
@@ -19,7 +19,7 @@
     
     <Grid>
         <TextBlock HorizontalAlignment="Center" Margin="0,92,0,0" TextWrapping="Wrap" Text="Selecteer het project" VerticalAlignment="Top"/>
-        <ListBox d:ItemsSource="{Binding Projects}" Margin="317,124,317,124"/>
+        <ListBox ItemsSource="{Binding Projects}" Margin="317,124,317,124" />
         <Button Content="Ga verder" HorizontalAlignment="Left" Margin="375,339,0,0" VerticalAlignment="Top"/>
 
     </Grid>
