--- a/View/App.xaml
+++ b/View/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="View.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:viewmodel="clr-namespace:ViewModel;assembly=ViewModel"
              StartupUri="StartingScreen/StartingScreen.xaml">
     <Application.Resources>
-
+        <viewmodel:MainViewModel x:Key="MainData"></viewmodel:MainViewModel>
     </Application.Resources>
 </Application>
