--- a/View/FormAssessment/FormAssessmentWindow.xaml
+++ b/View/FormAssessment/FormAssessmentWindow.xaml
@@ -9,11 +9,8 @@
         mc:Ignorable="d"
         Title="Beoordeling formulier" Height="auto" Width="auto"
         Background="#FF3A3A3A">
-    <Window.Resources>
-        <viewModel:AssessmentFormViewModel x:Key="ViewModel"/>
-    </Window.Resources>
     <Window.DataContext>
-        <Binding Source="{StaticResource ResourceKey=ViewModel}"></Binding>
+        <Binding Source="{StaticResource ResourceKey=AssessmentFormViewModel}"></Binding>
     </Window.DataContext>
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="15">
         <Grid.RowDefinitions>
@@ -112,11 +109,9 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-            <view:CriteriaUserControl></view:CriteriaUserControl>
+            <view:CriteriaUserControl>
+            </view:CriteriaUserControl>
         </StackPanel>
         <Button Grid.Row="5" Grid.Column="0" Height="30" Width="150" Content="Opslaan"  VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></Button>
-        <!--
-        <TextBox Grid.Row="5" Grid.Column ="1" VerticalAlignment="Center" Height="50" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Text="Opmerkingen"></TextBox>
-        -->    
-</Grid>
+    </Grid>
 </Window>
