--- a/View/FormAssessment/CriteriaUserControl.xaml
+++ b/View/FormAssessment/CriteriaUserControl.xaml
@@ -8,7 +8,7 @@
              xmlns:formAssessment="clr-namespace:ViewModel.FormAssessment;assembly=ViewModel"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance formAssessment:AssessmentFormViewModel}">
-    <Grid>
+    <Grid Height="375">
         <ListBox SelectionMode="Single"
                  SelectedItem="{Binding SelectedCompetence.SelectedCriterion , Mode=TwoWay}"
                  Background="#FF3A3A3A" 
@@ -29,13 +29,18 @@
                                     <Border.BorderThickness>2</Border.BorderThickness>
                                     <Grid Background="DarkGray" Width="150" Height="30">
                                         <WrapPanel>
-                                            <RadioButton 
+                                            <RadioButton
                                                 GroupName="{Binding RequirementModel.Criterion.Name}"
-                                                Content="{Binding Title}" Checked="RadioButton_Checked">
-                                                <i:Interaction.Triggers>
+                                                Content="{Binding}" Checked="RadioButton_Checked">
+                                                <RadioButton.IsChecked>
+                                                    <Binding  Mode="TwoWay" Path="IsChecked"></Binding>
+                                                </RadioButton.IsChecked>
+                                                    <i:Interaction.Triggers>
                                                     <i:EventTrigger EventName="Checked">
-                                                        <i:InvokeCommandAction Command="{Binding SaveCommand}" 
-                                                                               CommandParameter="{StaticResource ResourceKey=ViewModel}"/>
+                                                        <i:InvokeCommandAction 
+                                                            Command="{Binding Source={StaticResource AssessmentFormViewModel}, 
+                                                            Path=SaveCommand}" 
+                                                            CommandParameter="{Binding}"/>
                                                     </i:EventTrigger>
                                                 </i:Interaction.Triggers>
                                             </RadioButton>
