--- a/View/FormAssessment/CriteriaInformationUserControl.xaml
+++ b/View/FormAssessment/CriteriaInformationUserControl.xaml
@@ -27,12 +27,12 @@
                                    Text="{Binding Indicator.Title}"
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Center"></TextBlock>
-                        <TextBlock 
+                        <TextBlock
+                            Margin="0,0,0,20"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
                             TextWrapping="Wrap" 
-                            Text="{Binding Description}" 
-                            Padding="5"></TextBlock>
+                            Text="{Binding Description}"/>
                     </StackPanel>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
