--- a/View/FormAssessment/FormAssessmentWindow.xaml
+++ b/View/FormAssessment/FormAssessmentWindow.xaml
@@ -52,13 +52,13 @@
             <Border.BorderBrush>AliceBlue</Border.BorderBrush>
             <Border.BorderThickness>3</Border.BorderThickness>
             <ScrollViewer CanContentScroll="True" VerticalScrollBarVisibility="Auto">
-                <StackPanel MaxHeight="400" Width="200" Margin="5" Background="DarkGray">
+                <StackPanel Width="200" Background="DarkGray">
                     <Label  Margin="5" 
                             HorizontalAlignment="Center" VerticalAlignment="Center"
                             HorizontalContentAlignment="Center"
                             VerticalContentAlignment="Center"
-                           MaxWidth="175" MaxHeight="25" 
-                           Content="{Binding SelectedCompetence.Title}"/>
+                            MaxWidth="175" MaxHeight="25" 
+                            Content="{Binding SelectedCompetence.Title}"/>
                     <Label  Margin="5" 
                            HorizontalAlignment="Center" 
                            HorizontalContentAlignment="Center"
