fix: scroll viewer

--- a/View/FormAssessment/FormAssessmentWindow.xaml
+++ b/View/FormAssessment/FormAssessmentWindow.xaml
@@ -51,22 +51,22 @@
         <Border Grid.Column="0" Grid.Row="2" Grid.RowSpan="3" >
             <Border.BorderBrush>AliceBlue</Border.BorderBrush>
             <Border.BorderThickness>3</Border.BorderThickness>
-            <ScrollViewer CanContentScroll="True" VerticalScrollBarVisibility="Auto">
-                <StackPanel Width="200" Background="DarkGray">
-                    <Label  Margin="5" 
+            <ScrollViewer Height="400" CanContentScroll="True" VerticalScrollBarVisibility="Auto">
+                <DockPanel Width="200" Background="DarkGray">
+                    <Label DockPanel.Dock="Top"  Margin="5" 
                             HorizontalAlignment="Center" VerticalAlignment="Center"
                             HorizontalContentAlignment="Center"
                             VerticalContentAlignment="Center"
                             MaxWidth="175" MaxHeight="25" 
                             Content="{Binding SelectedCompetence.Title}"/>
-                    <Label  Margin="5" 
+                    <Label DockPanel.Dock="Top" Margin="5" 
                            HorizontalAlignment="Center" 
                            HorizontalContentAlignment="Center"
                            VerticalContentAlignment="Center"
                            VerticalAlignment="Center" MaxWidth="175" MaxHeight="25" 
                            Content="Criteria: "/>
-                    <view:CriteriaInformationUserControl ></view:CriteriaInformationUserControl>
-                </StackPanel>
+                    <view:CriteriaInformationUserControl DockPanel.Dock="Top" ></view:CriteriaInformationUserControl>
+                </DockPanel>
             </ScrollViewer>
         </Border>
         <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" 
@@ -109,8 +109,7 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-            <view:CriteriaUserControl>
-            </view:CriteriaUserControl>
+            <view:CriteriaUserControl/>
         </StackPanel>
         <Button Grid.Row="5" Grid.Column="0" Height="30" Width="150" Content="Opslaan"  VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></Button>
     </Grid>
