--- a/View/FormAssessment/FormAssessmentWindow.xaml
+++ b/View/FormAssessment/FormAssessmentWindow.xaml
@@ -72,7 +72,7 @@
         <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" 
               Width="350" Height="125" Background="DarkGray" 
               Margin="0,25,50,0">
-            <view:GradeInformationUserControl></view:GradeInformationUserControl>
+            <view:GradeInformationUserControl Grid.Row="0" Grid.Column="0"></view:GradeInformationUserControl>
         </Grid>
         <ListBox 
             SelectionMode="Single"
