--- a/View/App.xaml
+++ b/View/App.xaml
@@ -1,9 +1,10 @@
 ﻿<Application x:Class="View.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:viewmodel="clr-namespace:ViewModel;assembly=ViewModel"
              xmlns:formAssessment="clr-namespace:ViewModel.FormAssessment;assembly=ViewModel"
-             StartupUri="FormAssessment/FormAssessmentWindow.xaml">
+             StartupUri="StartingScreen/StartingScreen.xaml">
     <Application.Resources>
-        <formAssessment:AssessmentFormViewModel x:Key="AssessmentFormViewModel"/>
+        <viewmodel:MainViewModel x:Key="MainData"></viewmodel:MainViewModel>
     </Application.Resources>
 </Application>
