--- a/View/FormAssessment/FormAssessmentWindow.xaml
+++ b/View/FormAssessment/FormAssessmentWindow.xaml
@@ -9,9 +9,9 @@
         mc:Ignorable="d"
         Title="Beoordeling formulier" Height="auto" Width="auto"
         Background="#FF3A3A3A">
-    <Window.DataContext>
+    <!--<Window.DataContext>
         <Binding Source="{StaticResource ResourceKey=AssessmentFormViewModel}"></Binding>
-    </Window.DataContext>
+    </Window.DataContext>-->
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"></RowDefinition>
@@ -42,10 +42,12 @@
                FontWeight="ExtraBlack"
                FontSize="20"
                Content="Beoordelingssformulier"></Label>
+        <!--
         <view:ProjectGroupUserControl x:Name="GroupUserControl"
                                       Grid.Row="1" Grid.Column="0" 
                                       DataContext="{Binding}">
         </view:ProjectGroupUserControl>
+        -->
         <Button Name="ManageStudentsButton" Content="Groepen beheren" 
                 Height="30" Grid.Row="1" Grid.Column="0" Margin="20,50"></Button>
         <Border Grid.Column="0" Grid.Row="2" Grid.RowSpan="3" >
@@ -65,14 +67,14 @@
                            VerticalContentAlignment="Center"
                            VerticalAlignment="Center" MaxWidth="175" MaxHeight="25" 
                            Content="Criteria: "/>
-                    <view:CriteriaInformationUserControl DockPanel.Dock="Top" ></view:CriteriaInformationUserControl>
+                    <!--<view:CriteriaInformationUserControl DockPanel.Dock="Top" ></view:CriteriaInformationUserControl>-->
                 </DockPanel>
             </ScrollViewer>
         </Border>
         <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" 
               Width="350" Height="125" Background="DarkGray" 
               Margin="0,25,50,0">
-            <view:GradeInformationUserControl Grid.Row="0" Grid.Column="0"></view:GradeInformationUserControl>
+            <!--<view:GradeInformationUserControl Grid.Row="0" Grid.Column="0"></view:GradeInformationUserControl>-->
         </Grid>
         <ListBox 
             SelectionMode="Single"
@@ -109,7 +111,7 @@
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
-            <view:CriteriaUserControl/>
+            <!--<view:CriteriaUserControl/>-->
         </StackPanel>
         <Button Grid.Row="5" Grid.Column="0" Height="30" Width="150" Content="Opslaan"  VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"></Button>
     </Grid>
