--- a/View/FormAssessment/FormAssessmentWindow.xaml
+++ b/View/FormAssessment/FormAssessmentWindow.xaml
@@ -9,6 +9,7 @@
         mc:Ignorable="d"
         Title="Beoordeling formulier" Height="auto" Width="auto"
         Background="#FF3A3A3A">
+
     <Window.DataContext>
         <Binding Source="{StaticResource ResourceKey=AssessmentFormViewModel}"></Binding>
     </Window.DataContext>
@@ -47,7 +48,7 @@
                                       DataContext="{Binding}">
         </view:ProjectGroupUserControl>
         <Button Name="ManageStudentsButton" Content="Groepen beheren" 
-                Height="30" Grid.Row="1" Grid.Column="0" Margin="20,50"></Button>
+                Height="30" Grid.Row="1" Grid.Column="0" Margin="20,50" Click="ManageStudentsButton_Click"></Button>
         <Border Grid.Column="0" Grid.Row="2" Grid.RowSpan="3" >
             <Border.BorderBrush>AliceBlue</Border.BorderBrush>
             <Border.BorderThickness>3</Border.BorderThickness>
