--- a/View/GroupSelection/GroupSelection.xaml
+++ b/View/GroupSelection/GroupSelection.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="View.GroupSelection"
+﻿<Window x:Class="View.GroupSelection.GroupSelection"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="GroupSelection" Height="450" Width="575">
     <Window.DataContext>
-        <local:GroupSelectionViewModel/>
+        <Binding Source="{StaticResource ResourceKey=GroupSelectionViewModel}"></Binding>
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
@@ -27,7 +27,7 @@
         <Button     x:Name="AddStudentButton"               Margin="297,0,0,58"     Command="{Binding AddStudent}" Content="Voeg toe" RenderTransformOrigin="0.543,0.479" Height="36" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="231" />
         <Button     x:Name="DeleteSelectedStudentButton"    Margin="297,0,0,10"     Command="{Binding RemoveStudent}" Content="Verwijder geselecteerde student" HorizontalAlignment="Left"  Width="231" Height="40" VerticalAlignment="Bottom" Click="DeleteSelectedStudent"/>
         <TextBox    x:Name="StudentNameTextBox"             Margin="416,0,0,98"     TextWrapping="Wrap" Text="{Binding StudentName}" VerticalContentAlignment="Center" RenderTransformOrigin="0.493,0.496" HorizontalAlignment="Left" Width="112" Height="36" VerticalAlignment="Bottom"/>
-        <Button     x:Name="StartAssessmentButton"          Margin="140,0,0,10"     Content="Start Met Beoordeling" Command="{Binding StartAssessment}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="31" Width="125" Click="StartAssessment"/>
+        <Button     x:Name="StartAssessmentButton"          Margin="140,0,0,10"     Content="Start Met Beoordeling" Command="{Binding StartAssessment}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="31" Width="125" Click="StartAssessment" Tag="{Binding SelectedGroup}"/>
         
 
     </Grid>
